client/src/components/Metrics/MetricsProjectsList/MetricsProjectsList.module.scss
.root {
  max-height: 100%;
  overflow: hidden;
  position: relative;

  &::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 0.1rem;
    background-color: $color-octant-grey3;
  }

  .projectsList {
    display: grid;
    padding: 0 2.4rem;
    max-height: 100%;
    overflow: auto;
  }
}

